change the settings icon to language icon , add translations to change language function , implement save and load the selected language

--- a/lib/l10n/intl_ar_AR.arb
+++ b/lib/l10n/intl_ar_AR.arb
@@ -19,5 +19,9 @@
       "next": "التالي",
       "finish": "إنهاء",
       "priorities_full": "الأولويات الرئيسية ممتلئة! قم بإزالة عنصر لإضافة جديد.",
-      "task_added_to_priorities": "تمت إضافة {task} إلى الأولويات الرئيسية"
+      "task_added_to_priorities": "تمت إضافة {task} إلى الأولويات الرئيسية",
+      "select_language":"اختر اللغة",
+      "English":"الإنجليزية",
+      "French":"الفرنسية",
+      "Arabic":"العربية"
 }
